# TransparencyGenerator

./: CMakeLists.txt  LICENSE.md  README.md
src/: AppManager.cpp  AppManager.hpp  FileManager.cpp  FileManager.hpp  GUI.cpp  GUI.hpp  ImageEditor.cpp  ImageEditor.hpp  main.cpp
src/ui_components/: Button.cpp  Button.hpp  ImagePreview.cpp  ImagePreview.hpp  Interactive.cpp  Interactive.hpp  List.hpp  Panel.hpp  Slider.cpp  Slider.hpp
